--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="index.css" />
-    <title>Banklist</title>
+    <title>Bank-Task</title>
   </head>
   <body>
     <!-- TOP NAVIGATION -->
